--- a/css/styles.scss
+++ b/css/styles.scss
@@ -33,6 +33,8 @@ html, body {
 	--header-height: 3rem;
 	
 	--text-indent: 0em;
+	
+	--border-radius: .5rem;
 }
 
 body {
@@ -160,10 +162,21 @@ section {
 		padding-top: var(--header-height);
 	}
 	
-	& > :last-child {
+	> :last-child {
 		border-bottom: solid var(--thin-border-size) var(--thin-border-color);
 		
 		box-shadow: 0 .25rem .25rem -.25rem #1f1f1f;
+	}
+	
+	> .container {
+		&:first-child {
+			border-radius: var(--border-radius) var(--border-radius) 0 0;
+		}
+		
+		// Intentional
+		&:last-child {
+			border-radius: 0 0 var(--border-radius) var(--border-radius);
+		}
 	}
 }
 
