--- a/css/styles.scss
+++ b/css/styles.scss
@@ -235,18 +235,17 @@ img {
 }
 
 h1, h2, h3, h4, h6 {
-	font-family: "SF Display", "Lato", "Roboto", sans-serif;
-	font-weight: 300;
-	font-weight: 100;
+	font-family: "Source Sans Pro", "Roboto", sans-serif;
+	font-weight: 400;
 	font-size: 2rem;
 	
-	line-height: 1.4em;
+	line-height: 1.4;
 }
 
-h1 { font-size: 2rem; font-weight: 300; font-weight: 200; }
-h2 { font-size: 1.75rem; font-weight: 300; }
-h3 { font-size: 1.25rem; font-weight: 500; }
-h6 { font-size: 2rem; font-weight: 300; font-weight: 100; }
+h1 { font-size:    2rem; font-weight: 400; }
+h2 { font-size: 1.75rem; font-weight: 400; }
+h3 { font-size: 1.25rem; font-weight: 400; }
+h6 { font-size:    2rem; font-weight: 200; }
 
 hr {
 	margin: .5rem 0;
