--- a/css/styles.scss
+++ b/css/styles.scss
@@ -235,7 +235,7 @@ img {
 }
 
 h1, h2, h3, h4, h6 {
-	font-family: "Source Sans Pro", "Roboto", sans-serif;
+	font-family: "Roboto", sans-serif;
 	font-weight: 400;
 	font-size: 2rem;
 	
@@ -245,7 +245,7 @@ h1, h2, h3, h4, h6 {
 h1 { font-size:    2rem; font-weight: 400; }
 h2 { font-size: 1.75rem; font-weight: 400; }
 h3 { font-size: 1.25rem; font-weight: 400; }
-h6 { font-size:    2rem; font-weight: 200; }
+h6 { font-size:    2rem; font-weight: 100; }
 
 hr {
 	margin: .5rem 0;
