--- a/_includes/headTags.html
+++ b/_includes/headTags.html
@@ -3,7 +3,7 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<!-- Resources -->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro:200,400" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:100,400" />
         <link rel="stylesheet" href="/css/styles.css" />
 		<script src="/js/script.js"></script>
 		
