--- a/css/home.scss
+++ b/css/home.scss
@@ -24,18 +24,28 @@ div#superhero {
 	
 	height: 100vh;
 	
-	background-image: linear-gradient(var(--overlay-color), var(--overlay-color)), url("/assets/Banner.jpg");
-	background-color: black;
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
+	background-color: var(--overlay-color);
 	
 	flex-direction: column;
 	
 	justify-content: center;
 	align-items: center;
 	
-	& > * {
+	div#superhero-background {
+		position: absolute;
+		
+		width: 100%;
+		height: 100%;
+		
+		background-image: url("/assets/Banner.jpg");
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
+		
+		z-index: -1;
+	}
+	
+	> :not(div#superhero-background) {
 		max-width: 24rem;
 		
 		text-align: center;
