--- a/css/home.scss
+++ b/css/home.scss
@@ -43,6 +43,8 @@ div#superhero {
 		background-repeat: no-repeat;
 		
 		z-index: -1;
+		
+		will-change: transform;
 	}
 	
 	> :not(#superhero-background) {
