added a style to help with definition lists

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -309,6 +309,12 @@ ol, ul, li {
 	list-style-position: inside;
 }
 
+dl {
+	dt + dd {
+		margin-top: 1em;
+	}
+}
+
 .pagination-previous {
 	float: left;
 }
