--- a/_layouts/markdown.html
+++ b/_layouts/markdown.html
@@ -7,7 +7,7 @@
 	<body>
 		{% include header.html %}
 		<section>
-			<div class="container">
+			<div class="container md">
 				{{ content }}
 			</div>
 		</section>
