--- a/_includes/headTags.html
+++ b/_includes/headTags.html
@@ -1,6 +1,7 @@
 		<!-- Useful page info -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
+		{% feed_meta %}
 		
 		<!-- Resources -->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:100,400" />
