--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 
 		<footer>
-			<p title="Built at {{site.time | date: '%B %d, %Y'}}"><span id="footer-note">This is a placeholder!</span> &ndash; <span>2020</span> V360Tech</p>
+			<p><span id="footer-note">This is a placeholder!</span> &ndash; <span title="Built at {{site.time | date: '%Y-%m-%d %H:%M'}}.">{{site.time | date: "%Y"}}</span> V360Tech</p>
 		</footer>
